...
        val sessions by viewModel.sessions
        val groupMembers by viewModel.members
        val groupRequests by viewModel.requests

        Scaffold(
            modifier = Modifier.semantics {
                contentDescription = "JoinedGroupDetailsView"
            },
            topBar = {
                TopBar(
                    title = group?.name ?: "",
                    subtitle = group?.lecture?.lectureName ?: "",
                    navClick = { viewModel.navBack() },
...
                            )
                        }

                        Button(modifier = Modifier
                            .weight(1f)
                            .semantics {
                                contentDescription = "Participate-Button"
                            },
                            text = "Teilnehmen",
                            onClick = {viewModel.participate() }
                        )

                    }
                }

                Button(
                    text = "Gruppe verlassen",
                    onClick = {
                        viewModel.leaveGroup()
                    },
                    emphasize = true,
                    modifier = Modifier.semantics { contentDescription = "LeaveGroupButton" }
                )

            }
        }
    }
}
...
