...
                                    fontWeight = makeAdminButtonStyle.value,
                                    color = MaterialTheme.colorScheme.onPrimaryContainer
                                )
                            }
                            */

                            TextButton(modifier = Modifier.semantics { contentDescription = "RemoveMemberButton" },
                                onClick = {
                                if (removeMemberButtonStyle.value == FontWeight.Normal) {
                                    removeMemberButtonStyle.value = FontWeight.Bold

                                    nameButtonStyle.value = FontWeight.Normal
                                    makeAdminButtonStyle.value = FontWeight.Normal
...
                            )
                        }
                    }
                },
                confirmButton = {
                    TextButton(
                        modifier = Modifier.semantics { contentDescription = "ConfirmButton" },
                        onClick = {
                            if (reportFields.isNotEmpty()) {
                                report(reportFields.first())
                            } else if (makeAdminButtonStyle.value == FontWeight.Bold) {
                                makeAdmin()
                            } else if (removeMemberButtonStyle.value == FontWeight.Bold) {
...

@GeneratedExclusion
@Preview
@Composable
fun AdminDialogPreview() {
    val openDialog = remember { mutableStateOf(true) }
    val name = remember { mutableStateOf("max.mustermann") }
    val contact = remember { mutableStateOf("max.mustermann@mail.de") }

    AdminDialog(openDialog, name, contact, { println(it) })
}

@GeneratedExclusion
...
