...
@ExperimentalMaterial3Api
@Composable
fun JoinedGroupsView(viewModel: JoinedGroupsViewModel) {
    MyApplicationTheme3 {
        Scaffold(
            modifier = Modifier.semantics {
                contentDescription = "JoinedGroupsView"
            },
            topBar = { TopBar(title = "Meine Lerngruppen", isTab = true) },
            bottomBar = {
                NavigationBar(
                    clickMiddle = { viewModel.navToSearchGroups() },
                    clickRight = { viewModel.navToProfile() })
...
                        contentDescription = "MyColumn"
                    },
                    verticalArrangement = Arrangement.spacedBy(6.dp)
                ) {
                    items(viewModel.filteredGroups.value.size) {
                        val group = viewModel.filteredGroups.value.get(it)
                        SearchGroupResult(
                            groupName = group.name,
                            lecture = group.lecture?.lectureName ?: "",
                            major = group.major?.name ?: "",
                            onClick = { viewModel.navToGroup(group) }
                        )
                    }
...
