...
            break
        }
    }

    LazyRow(modifier = modifier) {
        items(chipNames.size) {
            Chip(
                modifier = Modifier.padding(start = 0.dp, end = 12.dp),
                onClick = {
                    if (selectedChipIndex == it) selectedChipIndex = -1
                    else selectedChipIndex = it
                    onChange(chipNames[it])
                },
...
}

@GeneratedExclusion
@Preview
@Composable
fun ChipSelectionRowPreview() {
    ChipSelectionRow(chipNames = listOf("Präsenz", "Online", "Hybrid"), onChange = {})
}

@GeneratedExclusion
@Preview
@Composable
fun ChipSelection2RowPreview() {
...
